k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: practice
  label:
    app: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel      
    spec:
      containers:
      - name: laravel
        image: noormuradi/laravel
        ports:
        - containerPort: 8181
