k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
  namespace: practice
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: laravel.com
    http:
      paths:
      - backend:
          service:
            name: laravel
            port:
              number: 80
        path: /calc
        pathType: Prefix
